--- a/healthcare.html
+++ b/healthcare.html
@@ -10,18 +10,31 @@
 		</h5>
 	</section>
 	<div class="project-header">
+		<div class="project-image">
+			<img
+				src="./images/healthcare/mcc-mobile.png"
+				alt="MCC Mobile"
+				class="lightbox-trigger"
+			/>
+			<h6 class="is-centered">
+				The original mobile app was redesigned to allow caregivers to see their
+				schedule, clock in and out of shifts, request available shifts, see
+				client information and assigned tasks, and monitor their invoice and
+				payment status. (views are from the mobile app, developed using Flutter)
+			</h6>
+		</div>
 		<div class="project-description">
 			<span>
 				<label>Year</label>
-				<h5>Begun 2021 (in active development)</h5>
+				<h5>2021 - Present</h5>
 			</span>
 			<span>
 				<label>Role</label>
-				<h5>Design Lead / Lead UI Engineer</h5>
+				<h5>Design Lead, Lead UI Engineer</h5>
 			</span>
 			<span>
 				<label>Team</label>
-				<h5> Myself, a developer, a database admin, and a product manager </h5>
+				<h5>Myself, a developer, a database admin, and a product manager</h5>
 			</span>
 			<h6>
 				A home healthcare agency's reputation relies heavily on caregiver
@@ -46,22 +59,8 @@
 			</h6>
 		</div>
 	</div>
-	<div class="project-image">
-		<img
-			src="./images/healthcare/mcc-mobile.png"
-			alt="MCC Mobile"
-			class="lightbox-trigger"
-			width="100%"
-		/>
-		<h6 class="is-centered">
-			The original mobile app was redesigned to allow caregivers to see their
-			schedule, clock in and out of shifts, request available shifts, see client
-			information and assigned tasks, and monitor their invoice and payment
-			status.
-		</h6>
-	</div>
 	<section class="project-section">
-		<h2>Business Operations</h2>
+		<h3>Business Operations</h3>
 		<h5>
 			In addition to providing caregivers a means to manage their schedules and
 			tasks, an operational platform was needed to streamline communication and
@@ -72,18 +71,18 @@
 			scheduling, task tracking, financials and communication across all roles.
 		</h5>
 		<h5>
-			My approach to product design is to transition between thinking through
-			information architecture and process flows in a prototyping tool and
-			working in a production environment to code final layouts, interactions,
-			and component APIs. For this project the tools of choice were Figma for
-			prototyping and Angular and Flutter for production.
+			My approach to product design is to first think through information
+			architecture and process flows using a prototyping tool. Once the
+			structure is clear, I transition to working in a production environment to
+			code final layouts, interactions, and component APIs. For this project the
+			tools of choice were Figma for prototyping and Angular and Flutter for
+			production.
 		</h5>
 		<div class="project-image">
 			<img
 				src="./images/healthcare/healthcare-header.png"
 				alt="MCC Client Record"
 				class="lightbox-trigger"
-				width="100%"
 			/>
 			<h6 class="is-centered"> Client Profile (Figma) </h6>
 		</div>
@@ -92,14 +91,13 @@
 				src="./images/healthcare/prod-client-profile.png"
 				alt="MCC Prod Client Profile"
 				class="lightbox-trigger"
-				width="100%"
 			/>
 			<h6 class="is-centered"> Client Profile (Angular) </h6>
 		</div>
 	</section>
 
 	<section class="project-section">
-		<h2>Addressing Efficiency</h2>
+		<h3>Addressing Efficiency</h3>
 		<h5>
 			Home healthcare agencies must coordinate multiple complex operations and
 			respond rapidly to unexpected changes. One frequent challenge involves
@@ -110,58 +108,53 @@
 			To address this, I designed a flexible scheduling system that allows for
 			quick reassignment of caregivers to open shifts. This system scores all
 			staff on caregiver availability, skill sets, and client needs to ensure
-			the best possible match. The platform also includes real-time
-			notifications to alert caregivers of new assignments and changes to their
-			schedules.
+			the best possible match.
 		</h5>
 		<div class="project-image">
 			<img
 				src="./images/healthcare/workflow-shift-replacement.png"
 				alt="MCC Workflow Shift Replacement"
 				class="lightbox-trigger"
-				width="100%"
 			/>
-			<h6 class="is-centered"> Workflow Shift Replacement (Figma) </h6>
+			<h6 class="is-centered"> Workflow: Staff Replacement (Figma) </h6>
 		</div>
 		<h5>
-			The automated scheduling system eliminated manual coordination of shift
-			changes, improving efficiency and client satisfaction. This streamlined
-			process maintains high-quality care while reducing administrative work and
-			ensuring reliable caregiver coverage.
+			The automated staffing recommendation system eliminated the need for
+			manually contacting caregivers and updating schedules for shift changes.
+			This improved efficiency and client satisfaction. The streamlined process
+			maintains high-quality care, reduces administrative work, and ensures
+			reliable caregiver coverage.
 		</h5>
 		<div class="project-image">
 			<img
 				src="./images/healthcare/prod-shift-replacement.png"
 				alt="Production Shift Replacement"
 				class="lightbox-trigger"
-				width="100%"
 			/>
-			<h6 class="is-centered"> Client List (Figma) </h6>
+			<h6 class="is-centered"> Staff Replacement (Angular) </h6>
 		</div>
 	</section>
 	<section class="project-section">
 		<h3>What I Learned</h3>
 		<h5>
-			While understanding business needs, managing requirements, testing and
-			iterating on designs were important to the success of this project, those
-			are essentially a given and were not my primary takeaway.
+			Understanding business needs, managing requirements, and testing and
+			iterating on designs were important to the success of this project. These
+			tasks are essential, but they were not my primary takeaway.
 		</h5>
 		<h5>
-			Working as a member of a small team in a startup environment is kind of my
-			jam. However, on this project, each team member was a technology veteran
-			possessing years of experience in building software efficiently. I was
-			grateful for the absence of ego and the respect for each person's
-			contributions. There was always a sense of collaboration, trust, and
-			shared purpose that made the work not only productive but also enjoyable.
+			I enjoy working as a member of a small team in a startup environment. On
+			this project, each team member was a technology veteran with years of
+			experience building software efficiently. I appreciated the absence of ego
+			and the respect for each person's contributions. There was a strong sense
+			of collaboration, trust, and shared purpose. This made the work productive
+			and enjoyable.
 		</h5>
 		<h5>
-			Without the optics that are sometimes at play in larger organizations, I
-			was able to focus on the work itself and the impact it had on our users.
-			Instead of taking weeks or months to get new features in the hands of our
-			users, we were able to iterate quickly and deliver value in a matter of
-			hours or days. Collaboration is a term that can be very buzzy without
-			having really meaning. Thankfully, in this experience, each person's
-			strengths and experiences were leveraged to create a better product
+			Without the optics that sometimes exist in organizations, I could focus on
+			the work and its impact on the business and its users. We delivered new
+			features quickly, often in hours or days instead of weeks or months.
+			Collaboration can be a buzzword, but in this experience, it was real. Each
+			person's strengths and experiences helped us create a better product
 			together.
 		</h5>
 	</section>
