--- a/logistics.html
+++ b/logistics.html
@@ -17,50 +17,49 @@
 		</h5>
 	</section>
 	<div class="project-header">
+		<div class="project-image">
+			<img
+				src="./images/logistics/logistics-header.png"
+				alt="Logistics Header"
+				class="lightbox-trigger"
+			/>
+			<h6 class="is-centered">
+				Yard Management module. (showing configuration for multi-module,
+				multi-site)
+			</h6>
+		</div>
 		<div class="project-description">
-			<span>
+			<div>
 				<label>Year</label>
-				<h5>Begun 2023 (in active development)</h5>
-			</span>
-			<span>
+				<h5>2023 - present</h5>
+			</div>
+			<div>
 				<label>Role</label>
-				<h5>Design Lead / Lead UI Engineer</h5>
-			</span>
-			<span>
+				<h5>Design Lead, Lead UI Engineer</h5>
+			</div>
+			<div>
 				<label>Team</label>
 				<h5>
 					Myself, Lead Developer, Jr. Developer, Database Admin, Product
 					Manager, Industry Consultants
 				</h5>
-			</span>
+			</div>
 			<h6>
 				My logistics work began with a client request for an alternative to
-				managing thier business through a set of independent systems. Their data
+				managing their business through a set of independent systems. Their data
 				was scattered and required manually moving business records between
-				tools. These manual processes resulted in discrepencies in their records
+				tools. These manual processes resulted in discrepancies in their records
 				and eroded trust with the clients that the business served.
 				Decentralized and unstructured records prevented insight into business
-				performance, making maintaing their required metrics a challenge.
+				performance, making maintaining their required metrics a challenge.
 			</h6>
 			<h6>
-				I contributed to this project by gathering requirements, diagraming
-				primary workflows, crafting user stores, creating interactive
-				prototypes, and developing the front-end designb system in both Angular
-				and Flutter.
+				I contributed to this project by gathering requirements, diagramming
+				primary workflows, crafting user stories, creating interactive
+				prototypes, and developing a front-end design system—using Angular for
+				web modules and Flutter for mobile modules.
 			</h6>
 		</div>
-	</div>
-	<div class="project-image">
-		<img
-			src="./images/logistics/logistics-header.png"
-			alt="Logistics Header"
-			class="lightbox-trigger"
-			width="100%"
-		/>
-		<h6 class="is-centered">
-			Yard Management module. (showing configuration for multi-module,
-			multi-site)
-		</h6>
 	</div>
 	<section class="project-section">
 		<h3>What The Heck Is 'Reverse' Logistics?</h3>
@@ -72,6 +71,14 @@
 			inefficiency was causing the retailer to question the accuracy of invoices
 			often resulting in delayed payments.
 		</h5>
+		<div class="project-image">
+			<img
+				src="./images/logistics/hypervisor-flow-diagram.png"
+				alt="Hypervisor Flow Diagram"
+				class="lightbox-trigger"
+			/>
+			<h6 class="is-centered"> Warehouse Management System (Flow Diagram) </h6>
+		</div>
 		<h5>
 			The project kicked off with a weekend of on-site requirements gathering
 			where the team talked with staff members to learn what challenges they
@@ -86,52 +93,40 @@
 			each trailer, and making sure their different computer systems showed the
 			same information. Once we understood these issues, we concluded that a
 			more integrated approach to inventory management was needed. We decided to
-			apply our healthcare platform's principles toward resouce management to
+			apply our healthcare platform's principles toward resource management to
 			create a more cohesive solution for their logistics operations.
 		</h5>
-		<div class="project-image">
-			<img
-				src="./images/logistics/hypervisor-flow-diagram.png"
-				alt="Hypervisor Flow Diagram"
-				class="lightbox-trigger"
-				width="100%"
-			/>
-			<h6 class="is-centered"> Warehouse Management System Flow Diagram </h6>
-		</div>
 		<h5>
 			Over the next few months, we worked with the client to build a simpler
 			system that solved their main problems. We created one central place to
 			track their inventory in real-time, and made it easy for workers to log
-			and update the contents of inbound and outbound trailers.
+			and update the contents of inbound and outbound trailers. A reliable
+			dataset resulted in bills of lading that were accurate, restoring the
+			client's trust in the final invoice.
 		</h5>
 		<div class="project-image">
 			<img
 				src="./images/logistics/hypervisor-mobile.png"
 				alt="Hypervisor Mobile Screenshots"
 				class="lightbox-trigger"
-				width="100%"
 			/>
-			<h6 class="is-centered"> Mobile App - Production Views (Flutter) </h6>
+			<h6 class="is-centered"> Mobile App - (Flutter) </h6>
 		</div>
 		<div class="project-image">
 			<img
 				src="./images/logistics/hypervisor-doors.png"
 				alt="Hypervisor Doors Screenshot"
 				class="lightbox-trigger"
-				width="100%"
 			/>
-			<h6 class="is-centered"> WebApp - Warehouse Door View (Angular) </h6>
+			<h6 class="is-centered"> WebApp - Dock View (Angular) </h6>
 		</div>
 		<div class="project-image">
 			<img
 				src="./images/logistics/hypervisor-report.png"
 				alt="Hypervisor Report Screenshot"
 				class="lightbox-trigger"
-				width="100%"
 			/>
-			<h6 class="is-centered">
-				WebApp - Warehouse Shift Report View (Angular)
-			</h6>
+			<h6 class="is-centered"> WebApp - Shift Report (Angular) </h6>
 		</div>
 	</section>
 	<section class="project-section">
@@ -141,11 +136,10 @@
 			enhance our understanding of logistics operations. By collaborating with
 			experts in the field, we aimed to identify best practices and innovative
 			solutions that could be applied to challenges across the industry. During
-			this phase my role centered around insisting that our industry resources
-			think through every aspect of a supply chain and identify opportunities
-			for improvement. Their breakdowns were key in developing my user stories
-			that served as a North Star for all proposed designs, implementation, and
-			evaluation.
+			this phase my role centered around insisting that we think through every
+			aspect of a supply chain and identify opportunities for improvement. These
+			breakdowns were key in creating user stories that served as a North Star
+			for all proposed designs, implementation, and evaluation.
 		</h5>
 		<h5>
 			Managing warehouse operations is just one part of the logistics process.
@@ -159,20 +153,18 @@
 		<div class="project-image">
 			<img
 				src="./images/logistics/graviton-metrics.png"
-				alt="Graviton Metrics Screenshot"
+				alt="Graviton Metrics Screenshot showing yard overview in Figma"
 				class="lightbox-trigger"
-				width="100%"
 			/>
 			<h6 class="is-centered"> WebApp - Yard Overview (Figma) </h6>
 		</div>
 		<div class="project-image">
 			<img
 				src="./images/logistics/graviton-mobile-metrics.png"
-				alt="Graviton Mobile Metrics Screenshot"
+				alt="Graviton Mobile Metrics Screenshot showing yard overview on mobile in Figma"
 				class="lightbox-trigger"
-				width="100%"
 			/>
-			<h6 class="is-centered"> Mobile App - Yard Overview (Figma) </h6>
+			<h6 class="is-centered"> Mobile - Yard Overview (Figma) </h6>
 		</div>
 		<h5>
 			Dwell time is a critical metric for optimizing logistics operations, as it
@@ -186,46 +178,42 @@
 		<div class="project-image">
 			<img
 				src="./images/logistics/graviton-yard.png"
-				alt="Graviton Yard Screenshot"
+				alt="Graviton Yard Screenshot showing yard heatmap view in Angular web app"
 				class="lightbox-trigger"
-				width="100%"
 			/>
 			<h6 class="is-centered"> WebApp - Yard 'Heatmap' View (Angular) </h6>
 		</div>
 		<h5>
 			We broke down supply chain operations into a set of modules that, in
-			addition to warehouse processes, would manage a buiness's yards, transit,
-			fulfillment, etc. These modules could be developed independently and
-			composed to meet the specific needs and scope of our clients' logistics
-			processes. Leaning into my background designing mapping solutions, our
-			first new module was a new yard management system that leveraged
-			geospatial data to optimize trailer operations and improve overall
-			efficiency.
+			addition to warehouse processes, would manage a business's yards, transit,
+			fulfillment, and overall business performance. These modules were
+			developed independently and designed compositionally to meet the specific
+			needs and scope of our clients' logistics processes. Leaning into my
+			background designing mapping solutions, our first new module was a yard
+			management system that leveraged geospatial data to optimize trailer
+			operations and improve overall efficiency.
 		</h5>
 		<div class="project-image">
 			<img
 				src="./images/logistics/graviton-warehouse.png"
-				alt="Graviton Warehouse Screenshot"
+				alt="Graviton Warehouse Screenshot showing warehouse view in Angular web app"
 				class="lightbox-trigger"
-				width="100%"
 			/>
 			<h6 class="is-centered"> WebApp - Warehouse View (Angular) </h6>
 		</div>
 		<div class="project-image">
 			<img
 				src="./images/logistics/graviton-fulfillment.png"
-				alt="Graviton Fulfillment Screenshot"
+				alt="Graviton Fulfillment Screenshot showing fulfillment view in Angular web app"
 				class="lightbox-trigger"
-				width="100%"
 			/>
 			<h6 class="is-centered"> WebApp - Fulfillment View (Angular) </h6>
 		</div>
 		<div class="project-image">
 			<img
 				src="./images/logistics/graviton-reporting.png"
-				alt="Graviton Reporting Screenshot"
+				alt="Graviton Reporting Screenshot showing reporting view in Angular web app"
 				class="lightbox-trigger"
-				width="100%"
 			/>
 			<h6 class="is-centered"> WebApp - Reporting View (Angular) </h6>
 		</div>
@@ -247,14 +235,13 @@
 		</h5>
 		<h5>
 			Overall, the challenges in the logistics space feel familiar to the
-			chellenges that I've encountered in other industries, including healthcare
+			challenges that I've encountered in other industries, including healthcare
 			and real estate. I find that the common challenge for many businesses is
-			adopting a effectve method for managing their resources. Whether working
+			adopting an effective method for managing their resources. Whether working
 			with trailers and their cargos or caregivers and their patients, similar
-			workflows and patterns are applicable. This is an understanding that I
-			have gained through experience which helps me recognize the needs of
-			businesses and their clients independent of industry semantics or
-			marketing buzzwords.
+			workflows and patterns apply. This is an understanding that I have gained
+			through experience which helps me recognize the needs of businesses and
+			their clients independent of industry semantics or marketing buzzwords.
 		</h5>
 	</section>
 </article>
