--- a/profile.html
+++ b/profile.html
@@ -6,9 +6,8 @@
 			Creative strategist and solutions engineer experienced directing UX
 			design, UI engineering, application development, video game production,
 			and broadcast animation. Specializing in healthcare, logistics, real
-			estate, global information systems, e-commerce, and entertainment.</h6
-		>
-		<ul>
+			estate, global information systems, e-commerce, and entertainment.
+		</h6>
 			<li
 				>Ambitious, resourceful, organized, and thorough. Able to manage
 				multiple projects while meeting expectations and deadlines.</li
@@ -73,7 +72,6 @@
 					<img
 						src="images/logos/widenet.png"
 						alt="WideNet Consulting Group Logo"
-						width="100%"
 					/>
 				</span>
 			</h3>
@@ -111,7 +109,6 @@
 					<img
 						src="images/logos/lightbox.png"
 						alt="LightBox Logo"
-						width="100%"
 					/>
 				</span>
 			</h3>
@@ -165,7 +162,6 @@
 					<img
 						src="images/logos/arbonne.png"
 						alt="Arbonne International Logo"
-						width="100%"
 					/>
 				</span>
 			</h3>
@@ -201,7 +197,6 @@
 					<img
 						src="images/logos/rakuten.png"
 						alt="Rakuten Logo"
-						width="100%"
 					/>
 				</span>
 			</h3>
@@ -235,7 +230,6 @@
 					<img
 						src="images/logos/mattel.png"
 						alt="Mattel Logo"
-						width="100%"
 					/>
 				</span>
 			</h3>
@@ -259,35 +253,6 @@
 			</ul>
 		</div>
 
-		<!-- <div class="experience-item">
-			<h3>GRAFX Group Inc<span class="company-logo">GFX</span></h3>
-			<h5 class="role">Creative Director</h5>
-			<p class="duration">1994 - 1998</p>
-			<p class="location">San Clemente, CA</p>
-			<ul>
-				<li
-					>Managed production and provided creative direction to a team of 4
-					artists and 2 programmers</li
-				>
-				<li
-					>Produced original animations and interface designs for use in
-					training, product displays, and broadcast television</li
-				>
-				<li
-					>Implemented new technology and invented techniques that kept GRAFX
-					Group a preferred vendor of companies including Toshiba, NEC, Hitachi,
-					and Western Digital</li
-				>
-				<li
-					>Trained new team members in project management and development
-					strategies</li
-				>
-				<li
-					>Awarded Emmy with DIC Entertainment for "Where in the World is Carmen
-					Sandiego?" in 1995</li
-				>
-			</ul>
-		</div> -->
 	</section>
 
 	<section class="project-section">
