--- a/public-service.html
+++ b/public-service.html
@@ -26,7 +26,7 @@
 			</span>
 			<span>
 				<label>Team</label>
-				<h5>Myself, a Product Lead, and a Development Team of 6</h5>
+				<h5>Me, a Product Lead, and a team of six developers</h5>
 			</span>
 			<h6>
 				The initial application of FieldForce was designed to assist Mosquito
@@ -44,12 +44,12 @@
 	</div>
 	<section class="project-section">
 		<h5>
-			We began this project with a disovery phase where user interviews were
+			We began this project with a discovery phase where user interviews were
 			conducted. I, along with 2 lead developers spent a week on-site with
 			Orange County Vector Control (CA) observing their work habits and
 			documenting common workflows and persistent pain points. My time was spent
 			in the front office fielding community requests for services, riding
-			shotgun on a sprayroute treating mosquito breeding sites, and collecting
+			shotgun on a spray route treating mosquito breeding sites, and collecting
 			samples of mosquito larvae from catch basins to send to the lab for
 			analysis. I also spent time speaking with administrators about their need
 			for improvements in managing workflows within their departments.
@@ -97,10 +97,11 @@
 			src="./images/field-force/ui-library.png"
 			alt="UI Library Screenshot"
 			class="lightbox-trigger"
-			width="100%"
 		/>
 		<h6 class="is-centered">
-			UI Library - SASS partials generating global CSS
+			UI Library - SASS partials (small reusable code files in the SASS styling
+			language) are used to generate global CSS, making it easier to maintain
+			and update the application's visual design.
 		</h6>
 	</div>
 	<section class="project-section">
@@ -116,7 +117,6 @@
 			src="./images/field-force/workflow-1.png"
 			alt="Workflow 1 Screenshot"
 			class="lightbox-trigger"
-			width="100%"
 		/>
 	</div>
 	<section class="project-section">
@@ -131,12 +131,13 @@
 		<h5>
 			When prototypes and production UI live primarily in code, it can be much
 			simpler to maintain quality and consistency with minimal dependency on
-			engineering.
+			engineering resources.
 		</h5>
 		<h5>
 			That said, on a larger project such as this, it became apparent that
 			separate HTML, CSS, and JS would quickly get out of sync. The lack of a
-			formal review process on presentational components during the development
+			formal review process on presentational components (UI elements focused
+			solely on how things look, not how they behave) during the development
 			process also didn't help matters. Understanding this, I began to explore
 			new templating libraries with the intent of creating a true design system
 			that would allow for maintenance at a component's source rather than at
