--- a/real-estate.html
+++ b/real-estate.html
@@ -4,8 +4,7 @@
 		<h2>Real Estate</h2>
 		<h5>
 			LandVision is a cloud-based mapping application that helps commercial real
-			estate brokers, builders, and developers find their next
-			opportunities.​​​​​​​
+			estate brokers, builders, and developers find their next opportunities.
 		</h5>
 	</section>
 	<div class="project-header">
@@ -62,7 +61,6 @@
 			src="./images/lv-connect/wires.png"
 			alt="Wires Screenshot"
 			class="lightbox-trigger"
-			width="100%"
 		/>
 		<h6 class="is-centered">
 			Original paper-prototype (Main screen, Contact, Location, Project, Notes)
@@ -91,7 +89,6 @@
 			src="./images/lv-connect/lofi-1.png"
 			alt="Lo Fidelity 1 Screenshot"
 			class="lightbox-trigger"
-			width="100%"
 		/>
 		<h6 class="is-centered">
 			HTML templates using CSS compiled from SASS partials
@@ -123,7 +120,6 @@
 			src="./images/lv-connect/hifi-1.png"
 			alt="Hi Fidelity 1 Screenshot"
 			class="lightbox-trigger"
-			width="100%"
 		/>
 		<h6 class="is-centered">
 			Home Screen, Location Summary, Layers UI, App Menu
@@ -134,7 +130,6 @@
 			src="./images/lv-connect/hifi-2.png"
 			alt="Hi Fidelity 2 Screenshot"
 			class="lightbox-trigger"
-			width="100%"
 		/>
 		<h6 class="is-centered">
 			Property Detail Screens, Saved Sites, Contacts, Notes, and Media
@@ -158,10 +153,10 @@
 		</h5>
 		<h5>
 			The biggest challenge with a 'companion' app such as this is the shared
-			back-end API of it's desktop counterpart. Compromises to the design were
+			back-end API of its desktop counterpart. Compromises to the design were
 			made to mitigate the performance issues that resulted from the real-time
-			sync of large datasets. Frustrating, yes, but also justification for
-			future re-architecture.
+			sync of large datasets, which was frustrating, but also served as
+			justification for future re-architecture.
 		</h5>
 	</section>
 </article>
