Left-aligned company logos under Professional Experience

--- a/profile.html
+++ b/profile.html
@@ -8,6 +8,7 @@
 			and broadcast animation. Specializing in healthcare, logistics, real
 			estate, global information systems, e-commerce, and entertainment.
 		</h6>
+		<ul>
 			<li
 				>Ambitious, resourceful, organized, and thorough. Able to manage
 				multiple projects while meeting expectations and deadlines.</li
@@ -31,7 +32,7 @@
 		<h2>Professional Experience</h2>
 
 		<div class="experience-item">
-			<h3>GP Creative, LLC<span class="company-logo">GPC</span></h3>
+			<h3><span class="company-logo">GPC</span>GP Creative, LLC</h3>
 			<h5 class="role">Owner / Head of Design</h5>
 			<p class="duration">Jan 2024 - Present</p>
 			<p class="location">Dana Point, CA · Remote</p>
@@ -67,13 +68,13 @@
 
 		<div class="experience-item">
 			<h3>
-				WideNet Consulting Group
 				<span class="company-logo">
 					<img
 						src="images/logos/widenet.png"
 						alt="WideNet Consulting Group Logo"
 					/>
 				</span>
+				WideNet Consulting Group
 			</h3>
 			<h5 class="role">Lead Designer</h5>
 			<p class="duration">Feb 2021 - Dec 2023</p>
@@ -104,13 +105,13 @@
 
 		<div class="experience-item">
 			<h3>
-				LightBox
 				<span class="company-logo">
 					<img
 						src="images/logos/lightbox.png"
 						alt="LightBox Logo"
 					/>
 				</span>
+				LightBox
 			</h3>
 			<h5 class="role">Lead Product Designer / UI Engineer</h5>
 			<p class="duration">Feb 2013 - Nov 2020</p>
@@ -157,13 +158,13 @@
 
 		<div class="experience-item">
 			<h3>
-				Arbonne International
 				<span class="company-logo">
 					<img
 						src="images/logos/arbonne.png"
 						alt="Arbonne International Logo"
 					/>
 				</span>
+				Arbonne International
 			</h3>
 			<h5 class="role">Senior UX Designer / Developer</h5>
 			<p class="duration">Oct 2012 - Feb 2013</p>
@@ -192,13 +193,13 @@
 
 		<div class="experience-item">
 			<h3>
-				Rakuten
 				<span class="company-logo">
 					<img
 						src="images/logos/rakuten.png"
 						alt="Rakuten Logo"
 					/>
 				</span>
+				Rakuten
 			</h3>
 			<h5 class="role">Senior Designer</h5>
 			<p class="duration">2003 - 2012</p>
@@ -225,13 +226,13 @@
 
 		<div class="experience-item">
 			<h3>
-				Mattel, Inc
 				<span class="company-logo">
 					<img
 						src="images/logos/mattel.png"
 						alt="Mattel Logo"
 					/>
 				</span>
+				Mattel, Inc
 			</h3>
 			<h5 class="role">Senior Web Designer</h5>
 			<p class="duration">1999 - 2003</p>
@@ -252,7 +253,6 @@
 				>
 			</ul>
 		</div>
-
 	</section>
 
 	<section class="project-section">
@@ -271,6 +271,9 @@
 			<li>Cross-functional Team Leadership</li>
 			<li>Design Tools (Figma, Adobe Creative Suite)</li>
 			<li>HTML/CSS/JavaScript</li>
+			<li>React</li>
+			<li>Angular</li>
+			<li>Flutter</li>
 		</ul>
 	</section>
 
