--- a/healthcare.html
+++ b/healthcare.html
@@ -137,25 +137,23 @@
 	<section class="project-section">
 		<h3>What I Learned</h3>
 		<h5>
-			Understanding business needs, managing requirements, and testing and
+			Understanding business needs, managing requirements, testing, and
 			iterating on designs were important to the success of this project. These
 			tasks are essential, but they were not my primary takeaway.
 		</h5>
 		<h5>
 			I enjoy working as a member of a small team in a startup environment. On
 			this project, each team member was a technology veteran with years of
-			experience building software efficiently. I appreciated the absence of ego
-			and the respect for each person's contributions. There was a strong sense
-			of collaboration, trust, and shared purpose. This made the work productive
-			and enjoyable.
+			experience building software efficiently. I appreciated the respect for
+			each person's contributions. There was a strong sense of collaboration,
+			trust, and shared purpose. This made the work productive and enjoyable.
 		</h5>
 		<h5>
-			Without the optics that sometimes exist in organizations, I could focus on
-			the work and its impact on the business and its users. We delivered new
-			features quickly, often in hours or days instead of weeks or months.
-			Collaboration can be a buzzword, but in this experience, it was real. Each
-			person's strengths and experiences helped us create a better product
-			together.
+			Our small team structure allowed us to focus purely on delivering value to
+			the business and its users. We shipped new features rapidly, often within
+			weeks or days. The close partnership between team members, each bringing
+			their unique strengths and experiences, helped us create an effective
+			solution together.
 		</h5>
 	</section>
 </article>
