Added meta tags and keywords

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<title>Greg Person - Principal UX Design Leader</title>
 		<meta charset="UTF-8" />
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>Portfolio</title>
+		<meta
+			name="description"
+			content="Principal UX Design Leader with extensive experience in healthcare, logistics, real estate, and e-commerce"
+		/>
+		<meta
+			name="keywords"
+			content="Product Design, UX Design, UI Design, Design Systems, Healthcare UX, Enterprise Software, Design Leadership, Remote Design Lead, Interaction Design, User Experience, Information Architecture, Design Strategy, Agile, Design Operations"
+		/>
 		<link
 			rel="stylesheet"
 			href="styles.css"
