--- a/profile.html
+++ b/profile.html
@@ -3,29 +3,43 @@
 	<section class="project-section">
 		<h2>Professional Summary</h2>
 		<h6>
-			Creative strategist and solutions engineer experienced directing UX
-			design, UI engineering, application development, video game production,
-			and broadcast animation. Specializing in healthcare, logistics, real
-			estate, global information systems, e-commerce, and entertainment.
+			Principal UX Leader specializing in enterprise software, UI/UX
+			architecture, and design systems. Expert in healthcare applications,
+			logistics platforms, and B2B/B2C solutions. Proven track record of
+			delivering user-centered designs that drive business growth and improve
+			operational efficiency by 30-40%. Specialist in accessibility (WCAG) and
+			cross-functional team leadership.
 		</h6>
-		<ul>
-			<li
-				>Ambitious, resourceful, organized, and thorough. Able to manage
-				multiple projects while meeting expectations and deadlines.</li
-			>
-			<li
-				>Proven ability to take the lead in communicating conceptual ideas and
-				design rationale within a user-centered design process.</li
-			>
-			<li
-				>Adept at managing interdisciplinary development teams, production
-				schedules, and budgets.</li
-			>
-			<li
-				>Capacity to transition between project manager, creative director,
-				technical lead, and visual designer.</li
-			>
-		</ul>
+
+		<div class="summary-item">
+			<h3 id="summary-list-label">Key Professional Highlights</h3>
+			<ul aria-labelledby="summary-list-label">
+				<li>
+					Demonstrated leadership managing an average of 5 concurrent projects with
+					cross-functional teams of 5-15 members. Successfully
+					executed roles in project management, creative direction, and
+					technical leadership across enterprise-scale initiatives.
+				</li>
+				<li>
+					Led design strategy for enterprise healthcare, logistics, and GIS
+					applications, achieving 30% increase in user adoption and 40%
+					reduction in training time.
+				</li>
+				<li>
+					Established design systems and UI component libraries that reduce
+					development time by 50% while ensuring consistent user experiences.
+				</li>
+                <li>
+                    Expert in information architecture (IA), user research, journey mapping, usability testing, and working within Agile environments.
+                </li>
+				<li>
+					Technical proficiency in HTML, CSS, JavaScript, React, Angular, and Flutter, enabling effective product and engineering team collaboration.
+				</li>
+				<li>
+					Skilled in web technologies and design tools (Figma, Adobe Creative Suite).
+				</li>
+			</ul>
+		</div>
 	</section>
 
 	<section class="project-section">
@@ -34,7 +48,7 @@
 		<div class="experience-item">
 			<h3><span class="company-logo">GPC</span>GP Creative, LLC</h3>
 			<h5 class="role">Owner / Head of Design</h5>
-			<p class="duration">Jan 2024 - Present</p>
+			<p class="duration">Present</p>
 			<p class="location">Dana Point, CA · Remote</p>
 			<ul>
 				<li
@@ -255,8 +269,6 @@
 		</div>
 	</section>
 
-	<section class="project-section">
-		<h2>Skills</h2>
 		<ul class="skills-list">
 			<li>Product Design</li>
 			<li>User Experience Design (UED)</li>
@@ -266,13 +278,12 @@
 			<li>Design Systems</li>
 			<li>Accessibility (a11y)</li>
 			<li>Visual Design</li>
-			<li>Web Technologies</li>
 			<li>Prototyping</li>
 			<li>Cross-functional Team Leadership</li>
-			<li>Design Tools (Figma, Adobe Creative Suite)</li>
-			<li>HTML/CSS/JavaScript</li>
-			<li>React</li>
-			<li>Angular</li>
+			<li>Web Technologies (HTML, CSS, JavaScript)</li>
+			<li>Frameworks: React, Angular, Flutter</li>
+			<li>Design Tools: Figma, Adobe Creative Suite</li>
+		</ul>
 			<li>Flutter</li>
 		</ul>
 	</section>
@@ -282,7 +293,6 @@
 		<div class="education-item">
 			<h3>Illinois Wesleyan University</h3>
 			<h5 class="degree">BFA, Fine Art</h5>
-			<p class="duration">1988 - 1992</p>
 			<ul>
 				<li>Concentration: Drawing and Painting</li>
 				<li>GPA: 3.6/4.0 - Graduated Cum Laude</li>
@@ -292,7 +302,6 @@
 		<div class="education-item">
 			<h3>Columbia College Chicago</h3>
 			<h5 class="degree">Certification in Traditional Animation</h5>
-			<p class="duration">1993 - 1994</p>
 			<ul>
 				<li>Enhanced animation techniques and traditional drawing skills</li>
 				<li>Studied sound-sync, camera techniques, and film editing</li>
